Bunch of changes...

--- a/css/m1-mobile.css
+++ b/css/m1-mobile.css
@@ -2,12 +2,8 @@
  * This file provides styles for progressive enhancement of 
  * the m1 template. See m1_screen.css for the basic styles.
  *
- * @author Eric Howey <eric@paddlingabc.com>
+ * @author Eric Howey <ehowey@gmail.com>
  *
- *  Colors:
- *  Dark Blue: #008BB3
- *  Bright Blue: #0AF
- *	Bright Green: #00CB3D
  */
  
  /* === Header Changes (480px wide) === */
