--- a/css/m1-screen.css
+++ b/css/m1-screen.css
@@ -1,10 +1,10 @@
 /**
  * This file provides styles for the general layout of the m1 template.
- * This layout is based on a mobile-first philosophy.  See m1_enhance.css
+ * This layout is based on a mobile-first philosophy.  See m1_mobile.css
  * for the css to progressively enhance the template for tablets and
  * desktops.
  *
- * @author Eric Howey <eric@paddlingabc.com>
+ * @author Eric Howey <ehowey@gmail.com>
  *  Colors:
  *  Dark Blue: #008BB3
  *	Bright Blue: #0AF
